--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
 .App {
   text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.main-upper {
+  background-image: url(https://assets.codepen.io/6060109/agency-hero-image.png);
+  background-size: cover;
+  height: 300px;
+  position: relative;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.upper-sections {
+  display:inline-flex;
+  padding: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-middle {
+  background-color: white;
+}
+
+.middle-sections {
+  display: inline-flex;
+  color: #806c6c;
+}
+
+.middle-title {
+  color: #133588;
+}
+
+.main-lower {
+  background-color: #133588;
+  color: white;
+}
+
+.subscribe-to-us {
+  padding: 10px;
+}
+
+#email-input {
+  border: none;
+  background: none;
+  border-bottom: 1px solid white;
+  width: 30%;
+  margin: 20px auto;
+  text-align: center;
+  color: rgba(255,255,255,.5);
+}
+
+#submit-button {
+  margin: 10px;
 }
